# pika_editor

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  about.toml  package-lock.json  package.json  tsconfig.app.json  vcpkg-configuration.json  vcpkg.json  vite.config.ts
crates/pika-cli/: Cargo.toml
crates/pika-cli/src/: main.rs
crates/pika-core/: Cargo.toml
crates/pika-core/src/: cli.rs  data_root.rs  diagnostic.rs  encoding.rs  error.rs  hashing.rs  huge.rs  ipc.rs  lib.rs  limits.rs  nontext.rs  notify_queue.rs  path_verify.rs  range.rs  recent.rs  review.rs  search.rs  settings.rs  shortcuts.rs  state.rs  util.rs  view_state.rs  workspace.rs
dev/: spec.md  (+5 more)
src/: CMakeLists.txt  index.html  ipc.ts  main.ts  shortcuts.ts
src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: main.json
src-tauri/icons/shell/: README.md  generate.py
src-tauri/nsis/: hooks.nsh
src-tauri/src/: access.rs  asset.rs  commands.rs  diagnostic.rs  document.rs  fs_atomic.rs  jumplist.rs  main.rs  preview.rs  settings_service.rs  single_instance.rs  snapshot.rs  snapshot_persist.rs  state_store.rs  util.rs  watcher.rs  webview2.rs
src/a11y/: index.ts
src/app/: CMakeLists.txt  dir_enumerator.cpp  dir_enumerator.h  main_console.cpp  main_gui.cpp  perf_log.cpp  perf_log.h  persistence.ts  pipe_server.cpp  pipe_server.h  types.ts  watch_thread.cpp  watch_thread.h
src/controller/: app_controller.cpp  app_controller.h  baseline_merge.cpp  baseline_merge.h  data_root.cpp  data_root.h  degrade_model.cpp  degrade_model.h  diff_mode_model.cpp  diff_mode_model.h  dir_lister.cpp  dir_lister.h  document_controller.cpp  document_controller.h  editor_view_model.cpp  editor_view_model.h  notification_model.cpp  notification_model.h  open_view_model.cpp  open_view_model.h  preview_builder.cpp  preview_builder.h  restore_plan.cpp  restore_plan.h  search_session.cpp  search_session.h  settings_view.cpp  settings_view.h  shortcut_table.cpp  shortcut_table.h  tab_manager.cpp  tab_manager.h  tree_view_messages.cpp  tree_view_messages.h  tree_view_model.cpp  tree_view_model.h  view_state.cpp  view_state.h  watch_event_map.cpp  watch_event_map.h  (+2 more)
src/core/diff/: cancel_token.h  diff_engine.cpp  diff_engine.h  diff_types.h  inline_diff.cpp  inline_diff.h  line_diff.cpp  line_diff.h
src/core/document/: review_flow.cpp  review_flow.h
src/core/ipc/: cli_parser.cpp  cli_parser.h  ipc_message.cpp  ipc_message.h  path_normalizer.cpp  path_normalizer.h  pipe_security.cpp  pipe_security.h
src/core/render/: csp_builder.cpp  csp_builder.h  html_inspector.cpp  html_inspector.h  html_sanitizer.cpp  html_sanitizer.h  html_tokenizer.cpp  html_tokenizer.h  markdown_renderer.cpp  markdown_renderer.h  preview_features.cpp  preview_features.h  render_guard.cpp  render_guard.h  render_options.h  url_classifier.cpp  url_classifier.h
src/core/search/: cancel_token.h  search_engine.cpp  search_engine.h  search_types.h
src/core/settings/: settings.cpp  settings.h
src/core/snapshot/: compression.cpp  compression.h  index_io.cpp  index_io.h  json_lite.cpp  json_lite.h  object_store.cpp  object_store.h  secure_dir.cpp  secure_dir.h  sensitive.cpp  sensitive.h  snapshot_store.cpp  snapshot_store.h  snapshot_types.cpp  snapshot_types.h
src/core/state/: state_io.cpp  state_io.h  state_types.h
src/core/watcher/: event_synthesizer.cpp  event_synthesizer.h  fs_event.h  fs_probe.cpp  fs_probe.h  rename_tracker.cpp  rename_tracker.h  resync.cpp  resync.h  self_save_guard.cpp  self_save_guard.h  settle_reader.cpp  settle_reader.h  watcher_core.cpp  watcher_core.h
src/core/workspace/: workspace_model.cpp  workspace_model.h
src/diff/: index.ts
src/editor/: index.ts
src/preview/: index.ts
src/search/: index.ts
src/styles/: app.css  tokens.css
src/theme/: index.ts
src/ui/: about.ts  context-menu.ts  dom.ts  editor_panel.cpp  editor_panel.h  file_tree_panel.cpp  file_tree_panel.h  image.ts  image_view_panel.cpp  image_view_panel.h  main_frame.cpp  main_frame.h  menu-specs.ts  menu.ts  modal.ts  notifications.ts  preview_view.cpp  preview_view.h  roving.ts  status.ts  tabs.ts  tree-actions.ts  tree.ts  ui_messages.cpp  ui_messages.h  unread.ts  unsupported_view_panel.cpp  unsupported_view_panel.h  viewstate.ts
src/util/: atomic_file.cpp  atomic_file.h  binary_detect.cpp  binary_detect.h  encoding.cpp  encoding.h  hash.cpp  hash.h  image_header.cpp  image_header.h  logger.cpp  logger.h  path.ts  path_util.h  result.h  task_runner.cpp  task_runner.h
tests/: CMakeLists.txt
tests/controller/: app_controller_test.cpp  baseline_merge_test.cpp  data_root_test.cpp  degrade_model_test.cpp  diff_mode_model_test.cpp  dir_lister_test.cpp  document_controller_test.cpp  editor_view_model_test.cpp  notification_model_test.cpp  open_view_model_test.cpp  preview_builder_test.cpp  restore_plan_test.cpp  search_session_test.cpp  settings_view_test.cpp  shortcut_table_test.cpp  tab_manager_test.cpp  tree_view_model_test.cpp  view_state_test.cpp  watch_event_map_test.cpp  workspace_controller_test.cpp
tests/core/diff/: diff_engine_test.cpp  inline_diff_test.cpp  line_diff_test.cpp
tests/core/document/: review_flow_test.cpp
tests/core/ipc/: cli_parser_test.cpp  ipc_message_test.cpp  path_normalizer_test.cpp  pipe_security_test.cpp
tests/core/render/: csp_builder_test.cpp  html_inspector_test.cpp  html_sanitizer_test.cpp  html_tokenizer_test.cpp  markdown_renderer_test.cpp  preview_features_test.cpp  render_guard_test.cpp  url_classifier_test.cpp
tests/core/search/: search_engine_test.cpp
tests/core/settings/: settings_test.cpp
tests/core/snapshot/: compression_test.cpp  index_io_test.cpp  object_store_test.cpp  sensitive_test.cpp  snapshot_store_test.cpp
tests/core/state/: state_io_test.cpp
tests/util/: atomic_file_test.cpp  binary_detect_test.cpp  encoding_test.cpp  hash_test.cpp  image_header_test.cpp  logger_test.cpp  result_test.cpp  task_runner_test.cpp
(+380 files in other folders)
