[workspace]
# pika Tauri フル刷新の cargo workspace（design doc 13章のリポジトリ構成）。
# - crates/pika-core : UI 非依存コア（Tauri/wry を一切知らない。cargo test の決定論ゲート対象）
# - crates/pika-cli  : console subsystem の薄い CLI（--help/--version/引数検証/終了コード）
# - src-tauri        : Tauri アプリ本体（pika-core に依存する唯一の橋渡し層）
members = ["crates/pika-core", "crates/pika-cli", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["pika"]

[workspace.lints.rust]
# design doc 12章「警告をエラー扱い」。コンパイル/型ゲートを最低保証にする。
warnings = "deny"

[workspace.dependencies]
# コア層が使う Tauri 非依存クレート（バージョンは workspace で一元管理）。
# 本スプリントでは最小限のみ宣言し、各機能スプリントで追加する。
thiserror = "1"
# ファイル監視の raw event 供給（src-tauri の監視スレッドのみが使う。pika-core は依存しない）。
# 自前合成層（デバウンス/rename/自己保存抑制/オーバーフロー）は pika-core::watcher が担う（design doc 4章）。
notify = "6"
# 内容ハッシュ（自己保存抑制・オーバーフロー再同期のプレスクリーン後の最終照合）。
# 暗号用途ではなく重複/同一性判定用の高速ハッシュ（design doc 11章 twox-hash 方針と整合）。
twox-hash = "1"
# 差分エンジン（design doc 2章/7章）。Myers LCS は標準機能・自前は語境界判定のみ。
# unicode-segmentation 連携で grapheme/語境界フォールバックを行う（pika-core が直接使う）。
similar = "2"
# 語境界不成立行（日本語等）の grapheme 単位フォールバック判定（design doc 2章/7章・要件8.2）。
unicode-segmentation = "1"
# スナップショット object の圧縮（design doc 11章・要件9.1「圧縮して保存」）。
zstd = "0.13"
# プレビュー: Markdown→HTML（GFM・raw HTML 透過 unsafe_=true）。最終段は必ず ammonia に通す（design doc 6章/7章）。
comrak = "0.29"
# プレビュー: 最終段サニタイズ（タグ/属性/URLスキームのホワイトリスト・DOM clobbering 防止・SVG サブセット）。
ammonia = "4"
# プレビュー CSP の nonce 生成（暗号品質乱数。script-src 'nonce-<rnd>'・design doc 6章）。
getrandom = "0.2"
# 単一インスタンス転送 JSON・state.json の直列化（design doc 9章・要件3.2/10.1）。
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# エンコーディング往復（BOM/UTF-8/UTF-16/Shift_JIS 判定・往復・表現不能文字検出）。
# encoder の unmappable ハンドリングで保存中断フローを実装する（design doc 12章・要件5.2/5.6）。
encoding_rs = "0.8"
# 検索/置換（後方参照・キャプチャ参照・Unicode文字クラス・第一候補は純Rust）。
# backtrack_limit で ReDoS のバックトラック上限、協調キャンセルで処理打切りを実装（design doc 2章/12章/15章-8・要件5.4）。
fancy-regex = "0.16"
# settings.toml の解析（要件10.3/10.4）。parse のみ（serde derive 不使用）に絞り依存を最小化する。
# default-features を切り、["parse"] だけ有効化（display/preserve_order 等は不要＝軽量）。
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release]
# 軽量配布（design doc 1章「軽い」）。LTO とサイズ最適化でバイナリを絞る。
lto = true
opt-level = "z"
codegen-units = 1
strip = true
panic = "abort"
