[package]
name = "pika-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "pika Tauri アプリ本体（GUI・windows subsystem）。pika-core に依存する唯一の橋渡し層"

[lints]
workspace = true

[[bin]]
# windows subsystem の GUI 本体。console 側は crates/pika-cli。
name = "pika"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# コアロジックは pika-core に集約（Tauri 層は薄い境界）。
pika-core = { path = "../crates/pika-core" }
# `unstable`: メインウィンドウへ権限ゼロのプレビュー別WebView を重ねる Window::add_child（マルチ WebView）に必要
# （design doc 6章 子WebView オーバーレイ隔離）。
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# pika-asset:// custom protocol の URL パス復号（percent-decode）に使う（U3 画像簡易ビュー・要件12.2）。
# 既に推移的依存として Cargo.lock に存在するためビルド追加コストは最小。
percent-encoding = "2"
# プレビュー別WebView へ配信する同梱ベンダーアセット（Mermaid/KaTeX/highlight・約3.84MiB）を
# exe へ埋め込む（自己完結・ポータブル配布。実行時 FS 依存にしない＝design doc 1章「軽い/ワークスペースを汚さない」）。
# fonts が 16 個ありビルド時に静的ツリーで畳む方が `include_bytes!` 列挙より簡潔。
include_dir = "0.7"
# 監視スレッド: OS の raw event 供給（notify）と内容ハッシュ（twox-hash）。
# 合成ロジック（デバウンス/rename/自己保存抑制/オーバーフロー）は pika-core::watcher。
notify = { workspace = true }
twox-hash = { workspace = true }
# 「ブラウザで開く」「ログフォルダを開く」= OS 既定アプリ起動（要件6.2/design G）。Tauri 公式・軽量。
# **frontend へ opener の command ACL は一切開放しない**。自前の薄い #[tauri::command]
# （commands::open_in_default_app / open_log_folder）の内部からのみ Rust API（open_path）を呼ぶ。
# detached 起動なので UI スレッドを塞がない（design doc 1章「固まらない」）。
tauri-plugin-opener = "2"
# OS ネイティブ選択ダイアログ（フォルダを開く/ファイルを開く・要件3.2/11.2）。Tauri 公式・軽量。
# **最小権限**＝capability では `dialog:allow-open` のみ付与し保存ダイアログ（allow-save）は付けない。
# 返却パスは必ず既存の open_workspace / read_file（AccessControl 再検証）経由で読むため
# ダイアログ結果を直接 FS read する近道 command は新設しない（迂回経路を作らない）。
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
# WebView2 Runtime 不在検出（レジストリ読取）・最小ネイティブ MessageBox（design doc 18章）、
# および単一インスタンスの自前 named pipe（CreateNamedPipe/DACL/PIPE_REJECT_REMOTE_CLIENTS・SID 取得）に使う。
# proc-macro 不要の軽量 FFI バインディング。Tauri も同系列を使うため追加コストは小さい。
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Pipes",
  "Win32_System_IO",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Threading",
  # ジャンプリスト（最近使った項目）: SHAddToRecentDocs で OS の Recent jump list へ登録する。
  "Win32_UI_Shell",
] }

[features]
# Tauri の custom-protocol（本番ビルドでアセットを埋め込む）。bundler 有効化は sprint 7。
custom-protocol = ["tauri/custom-protocol"]
