[package]
name = "pika-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "pika の console subsystem CLI（--help/--version/引数検証/終了コード・GUI 起動の前段）"

[lints]
workspace = true

[[bin]]
name = "pika-cli"
path = "src/main.rs"

[dependencies]
# CLI は core の純粋ロジック（-g パース・データルート解決）に依存する。
# Tauri/wry には依存しない（GUI 起動は pika.exe の spawn で行う＝design doc 9章 二段構成）。
pika-core = { path = "../pika-core" }
