[package]
name = "pika-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "pika コアサービス層（UI/Tauri/wry 非依存・cargo test の決定論ゲート対象）"

[lints]
workspace = true

[dependencies]
# 重要: 本クレートは Tauri / wry / WebView に一切依存しない（design doc 4章「コアは UI を知らない」）。
# acceptance_criteria の「pika-core が Tauri に依存しない（dependencies に tauri/wry が無い）」を満たす。
thiserror = { workspace = true }
# diff: 行 LCS は similar、語境界不成立行の grapheme フォールバックは unicode-segmentation（design doc 7章）。
similar = { workspace = true }
unicode-segmentation = { workspace = true }
# snapshot: content-addressed object の重複排除/同一性判定ハッシュ（design doc 11章 twox-hash 方針）。
twox-hash = { workspace = true }
# snapshot: object の zstd 圧縮（design doc 11章・要件9.1）。
zstd = { workspace = true }
# render: Markdown→HTML（comrak unsafe_=true で raw HTML 透過）→ ammonia 最終段サニタイズ（design doc 6章/7章）。
# 未信頼文書の <script>/on*/javascript:/<iframe> 除去・DOM clobbering 防止・SVG サブセットは ammonia が担う。
comrak = { workspace = true }
ammonia = { workspace = true }
# render: CSP の script-src 'nonce-<rnd>' 用の暗号品質乱数（design doc 6章）。
getrandom = { workspace = true }
# ipc/state: 単一インスタンス転送 JSON の組立/スキーマ検証と state.json の直列化（design doc 9章・要件3.2/10.1）。
# 自前 named pipe で受け渡す JSON とアプリ状態の永続表現を型で固め、決定論ゲートに乗せる。
serde = { workspace = true }
serde_json = { workspace = true }
# encoding: BOM/UTF-8/Shift_JIS 自動判定・往復・保存時の表現不能文字検出（design doc 11章・要件5.2/5.6）。
encoding_rs = { workspace = true }
# search: fancy-regex 検索/置換（後方参照・キャプチャ参照・Unicode文字クラス・ReDoS バックトラック上限）。
fancy-regex = { workspace = true }
